--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node prisma/seed.js",
+    "prisma:seed": "npx prisma db seed",
+    "dev": "node index.js",
+    "start": "node index.js"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   },
   "keywords": [],
   "author": "",
@@ -11,8 +18,13 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.21.1",
     "pg": "^8.13.1",
     "prisma": "^5.21.1"
+  },
+  "devDependencies": {
+    "prisma": "^4.0.0"
   }
 }
